[gd_scene load_steps=2 format=3 uid="uid://7iywtxxqygke"]

[ext_resource type="Script" uid="uid://dhagpecr3oqjn" path="res://multiplayer/network_popup.gd" id="1_lkqci"]

[node name="NetworkPopup" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -223.0
offset_right = 224.0
offset_bottom = 379.0
grow_horizontal = 2
script = ExtResource("1_lkqci")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Network Menu"
horizontal_alignment = 1

[node name="StatusLight" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.326971, 0.676128, 0.420439, 1)

[node name="HostGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Join Game"

[node name="IpAddress" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Name"

[node name="PlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NetworkLog" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DisconnectButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Disconnect"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
